[gd_scene load_steps=10 format=3 uid="uid://c3615mg6hyw76"]

[ext_resource type="Script" path="res://scripts/chicken_egg.gd" id="1_4cn5f"]
[ext_resource type="Script" path="res://scripts/Skeletor.gd" id="1_ax3js"]
[ext_resource type="Animation" uid="uid://dye4vatmrhkym" path="res://textures/eggrun-animation.res" id="1_g1fq2"]

[sub_resource type="Animation" id="Animation_ph2a8"]
resource_name = "RESET"
length = 1.2
loop_mode = 1
tracks/0/type = "rotation_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skeleton3D:Spine0")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1)
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skeleton3D:HipL")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1)
tracks/2/type = "rotation_3d"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Skeleton3D:ThighL")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1)
tracks/3/type = "rotation_3d"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Skeleton3D:ShinL")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1)
tracks/4/type = "rotation_3d"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Skeleton3D:FootL")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1)
tracks/5/type = "rotation_3d"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Skeleton3D:HipR")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1)
tracks/6/type = "rotation_3d"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Skeleton3D:ThighR")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1)
tracks/7/type = "rotation_3d"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Skeleton3D:ShinR")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1)
tracks/8/type = "rotation_3d"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Skeleton3D:FootR")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s0sm3"]
_data = {
"RESET": SubResource("Animation_ph2a8"),
"eggrun": ExtResource("1_g1fq2")
}

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_m13qj"]

[sub_resource type="SphereMesh" id="SphereMesh_qdbs1"]

[sub_resource type="CylinderMesh" id="CylinderMesh_dby8l"]
top_radius = 0.02
bottom_radius = 0.02
height = 0.45

[sub_resource type="BoxMesh" id="BoxMesh_ggsow"]
size = Vector3(0.1, 0.02, 0.3)

[node name="ChickenEgg" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_4cn5f")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_s0sm3")
}
playback_default_blend_time = 0.5
speed_scale = 2.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_m13qj")

[node name="Skeleton3D" type="Skeleton3D" parent="."]
bones/0/name = "Spine0"
bones/0/parent = -1
bones/0/rest = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
bones/0/enabled = true
bones/0/position = Vector3(0.000474975, 0.919622, -0.0198516)
bones/0/rotation = Quaternion(0, 0, 0, 1)
bones/0/scale = Vector3(1, 1, 1)
bones/1/name = "Spine1"
bones/1/parent = 0
bones/1/rest = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
bones/1/enabled = true
bones/1/position = Vector3(0, 0.3, 0)
bones/1/rotation = Quaternion(0, 0, 0, 1)
bones/1/scale = Vector3(1, 1, 1)
bones/2/name = "Spine2"
bones/2/parent = 1
bones/2/rest = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
bones/2/enabled = true
bones/2/position = Vector3(0, 0.3, 0)
bones/2/rotation = Quaternion(0, 0, 0, 1)
bones/2/scale = Vector3(1, 1, 1)
bones/3/name = "Head"
bones/3/parent = 2
bones/3/rest = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
bones/3/enabled = true
bones/3/position = Vector3(0, 0.3, 0)
bones/3/rotation = Quaternion(0, 0, 0, 1)
bones/3/scale = Vector3(1, 1, 1)
bones/4/name = "ShoulderL"
bones/4/parent = 1
bones/4/rest = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.2, 0, 0)
bones/4/enabled = true
bones/4/position = Vector3(-0.2, 0, 0)
bones/4/rotation = Quaternion(0, 0, 0, 1)
bones/4/scale = Vector3(1, 1, 1)
bones/5/name = "BicepL"
bones/5/parent = 4
bones/5/rest = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.3, 0, 0)
bones/5/enabled = true
bones/5/position = Vector3(-0.3, 0, 0)
bones/5/rotation = Quaternion(0, 0, 0, 1)
bones/5/scale = Vector3(1, 1, 1)
bones/6/name = "ForeArmL"
bones/6/parent = 5
bones/6/rest = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.3, 0, 0)
bones/6/enabled = true
bones/6/position = Vector3(-0.3, 0, 0)
bones/6/rotation = Quaternion(0, 0, 0, 1)
bones/6/scale = Vector3(1, 1, 1)
bones/7/name = "HandL"
bones/7/parent = 6
bones/7/rest = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.15, 0, 0)
bones/7/enabled = true
bones/7/position = Vector3(-0.15, 0, 0)
bones/7/rotation = Quaternion(0, 0, 0, 1)
bones/7/scale = Vector3(1, 1, 1)
bones/8/name = "ShoulderR"
bones/8/parent = 1
bones/8/rest = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, 0, 0)
bones/8/enabled = true
bones/8/position = Vector3(0.2, 0, 0)
bones/8/rotation = Quaternion(0, 0, 0, 1)
bones/8/scale = Vector3(1, 1, 1)
bones/9/name = "BicepR"
bones/9/parent = 8
bones/9/rest = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3, 0, 0)
bones/9/enabled = true
bones/9/position = Vector3(0.3, 0, 0)
bones/9/rotation = Quaternion(0, 0, 0, 1)
bones/9/scale = Vector3(1, 1, 1)
bones/10/name = "ForeArmR"
bones/10/parent = 9
bones/10/rest = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3, 0, 0)
bones/10/enabled = true
bones/10/position = Vector3(0.3, 0, 0)
bones/10/rotation = Quaternion(0, 0, 0, 1)
bones/10/scale = Vector3(1, 1, 1)
bones/11/name = "HandR"
bones/11/parent = 10
bones/11/rest = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.15, 0, 0)
bones/11/enabled = true
bones/11/position = Vector3(0.15, 0, 0)
bones/11/rotation = Quaternion(0, 0, 0, 1)
bones/11/scale = Vector3(1, 1, 1)
bones/12/name = "HipL"
bones/12/parent = 0
bones/12/rest = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.2, 0, 0)
bones/12/enabled = true
bones/12/position = Vector3(-0.2, 0, 0)
bones/12/rotation = Quaternion(0, 0, 0, 1)
bones/12/scale = Vector3(1, 1, 1)
bones/13/name = "ThighL"
bones/13/parent = 12
bones/13/rest = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.45, 0)
bones/13/enabled = true
bones/13/position = Vector3(0, -0.45, 0)
bones/13/rotation = Quaternion(0, 0, 0, 1)
bones/13/scale = Vector3(1, 1, 1)
bones/14/name = "ShinL"
bones/14/parent = 13
bones/14/rest = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.45, 0)
bones/14/enabled = true
bones/14/position = Vector3(0, -0.45, 0)
bones/14/rotation = Quaternion(0, 0, 0, 1)
bones/14/scale = Vector3(1, 1, 1)
bones/15/name = "FootL"
bones/15/parent = 14
bones/15/rest = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.2)
bones/15/enabled = true
bones/15/position = Vector3(0, 0, -0.2)
bones/15/rotation = Quaternion(0, 0, 0, 1)
bones/15/scale = Vector3(1, 1, 1)
bones/16/name = "HipR"
bones/16/parent = 0
bones/16/rest = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, 0, 0)
bones/16/enabled = true
bones/16/position = Vector3(0.2, 0, 0)
bones/16/rotation = Quaternion(0, 0, 0, 1)
bones/16/scale = Vector3(1, 1, 1)
bones/17/name = "ThighR"
bones/17/parent = 16
bones/17/rest = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.45, 0)
bones/17/enabled = true
bones/17/position = Vector3(0, -0.45, 0)
bones/17/rotation = Quaternion(0, 0, 0, 1)
bones/17/scale = Vector3(1, 1, 1)
bones/18/name = "ShinR"
bones/18/parent = 17
bones/18/rest = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.45, 0)
bones/18/enabled = true
bones/18/position = Vector3(0, -0.45, 0)
bones/18/rotation = Quaternion(0, 0, 0, 1)
bones/18/scale = Vector3(1, 1, 1)
bones/19/name = "FootR"
bones/19/parent = 18
bones/19/rest = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.2)
bones/19/enabled = true
bones/19/position = Vector3(0, 0, -0.2)
bones/19/rotation = Quaternion(0, 0, 0, 1)
bones/19/scale = Vector3(1, 1, 1)
script = ExtResource("1_ax3js")
head_height = 0.3
shoulder_height = 0.3

[node name="Egg" type="BoneAttachment3D" parent="Skeleton3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000474975, 0.919622, -0.0198516)
bone_name = "Spine0"
bone_idx = 0

[node name="MeshInstance3D" type="MeshInstance3D" parent="Skeleton3D/Egg"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.406467, 0)
mesh = SubResource("SphereMesh_qdbs1")

[node name="ThighL" type="BoneAttachment3D" parent="Skeleton3D"]
transform = Transform3D(1, 0, 0, 0, 0.568082, -0.822972, 0, 0.822972, 0.568082, -0.199525, 0.919622, -0.0198516)
bone_name = "HipL"
bone_idx = 12

[node name="MeshInstance3D" type="MeshInstance3D" parent="Skeleton3D/ThighL"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.225, 0)
mesh = SubResource("CylinderMesh_dby8l")

[node name="ThighR" type="BoneAttachment3D" parent="Skeleton3D"]
transform = Transform3D(1, 0, 0, 0, 0.932221, 0.361889, 0, -0.361889, 0.932221, 0.200475, 0.919622, -0.0198516)
bone_name = "HipR"
bone_idx = 16

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Skeleton3D/ThighR"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.225, 0)
mesh = SubResource("CylinderMesh_dby8l")
skeleton = NodePath("../../ThighL")

[node name="ShinL" type="BoneAttachment3D" parent="Skeleton3D"]
transform = Transform3D(1, 0, 0, 0, 0.980192, -0.198048, 0, 0.198048, 0.980192, -0.199525, 0.663985, -0.390189)
bone_name = "ThighL"
bone_idx = 13

[node name="MeshInstance3D" type="MeshInstance3D" parent="Skeleton3D/ShinL"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.225, 0)
mesh = SubResource("CylinderMesh_dby8l")

[node name="ShinR" type="BoneAttachment3D" parent="Skeleton3D"]
transform = Transform3D(1, 0, 0, 0, -0.373089, 0.927796, 0, -0.927796, -0.373089, 0.200475, 0.500122, 0.142999)
bone_name = "ThighR"
bone_idx = 17

[node name="MeshInstance3D" type="MeshInstance3D" parent="Skeleton3D/ShinR"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.225, 0)
mesh = SubResource("CylinderMesh_dby8l")

[node name="FootL" type="BoneAttachment3D" parent="Skeleton3D"]
transform = Transform3D(1, 0, 0, 0, 0.980192, -0.198048, 0, 0.198048, 0.980192, -0.199525, 0.222898, -0.47931)
bone_name = "ShinL"
bone_idx = 14

[node name="MeshInstance3D" type="MeshInstance3D" parent="Skeleton3D/FootL"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.05)
mesh = SubResource("BoxMesh_ggsow")

[node name="FootR" type="BoneAttachment3D" parent="Skeleton3D"]
transform = Transform3D(1, 0, 0, 0, -0.676009, 0.736893, 0, -0.736893, -0.676009, 0.200475, 0.668012, 0.560507)
bone_name = "ShinR"
bone_idx = 18

[node name="MeshInstance3D" type="MeshInstance3D" parent="Skeleton3D/FootR"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.05)
mesh = SubResource("BoxMesh_ggsow")

[node name="CamHingeH" type="Node3D" parent="."]
top_level = true

[node name="CamHingeV" type="Node3D" parent="CamHingeH"]

[node name="SpringArm3D" type="SpringArm3D" parent="CamHingeH/CamHingeV"]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 1, 0)
spring_length = 7.0

[node name="CamXForm" type="Node3D" parent="CamHingeH/CamHingeV/SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 0.965926, -0.258819, 0, 0.258819, 0.965926, 0, 0.454443, 7.07872)
